2006-08-17  Per Bothner  <per@bothner.com>

	* XQParser.java (parseItemType): The sementics of empty-sequence()
	don't really match those of Type.void_type.

	* XQParser.java (parseItemType): Emit error if unknown type.

	* XQParser.java (parseFLWRExpression): Also reset flworDeclsCount
	when done.

	* XQParser.java (parseUnaryExpr): Fix precedence by recursively
	calling parseUnaryExpr instead of parseUnionExpr.

2006-06-28  Per Bothner  <per@bothner.com>

	* XQParser.java: Update to use Symbol.makeUninterned.
	(parseNamedNodeType, parseQName): Use new ElementType.MATCH_ANY_QNAME.
	(parseNameTest): Cleaner handling of the any-namespace case.
	Remove redundant intern call.
	* XQResolveNames.java: Update SName -> Symbol.
	* XQuery.java (typeMap, getExternal):  Likewise.

2006-06-10  Per Bothner  <per@bothner.com>

	* XQuery.java (initXQuery): Fix packages names for functions in
	TimeUtils class.

2006-05-31  Per Bothner  <per@bothner.com>

	* XQuery.java (evalToFocusProc): Update ModuleExp.evalModule call.

2006-05-25  Per Bothner  <per@bothner.com>

	Handle module dependencies and cycles.	
	* XQParser.java (parse): Pass ModuleInfo to require.importDefinitions.
	* XQuery.java (parse): Use new Compilation.pushNewModule method.
	
2006-05-21  Per Bothner  <per@bothner.com>

	* XQParser.java (parse): Fix typo in error message.

2006-04-11  Per Bothner  <per@bothner.com>

	* XQuery.java (instance): Make public.

2006-03-27  Per Bothner  <per@bothner.com>

	* XQuery.java (typeMap): Added newly-implemented base64Binary.
	Added anyAtomicType as an alias for Object.

2006-03-26  Per Bothner  <per@bothner.com>

	* XQParser.java (treatAs): New static constant.
	(emptyOrderDeclarationSeen, boundarySpaceDeclarationSeen,
	copyNamespacesNoInherit, copyNamespacesNoPreserve,
	copyNamespacesDeclarationSeen, constructionModeStrip,
	constructionModeDeclarationSeen): New fields for static context
	and prolog state.
	(preserveBoundarySpace): Rename to boundarySpacePreserve.