@@ -1,3 +1,7 @@
+2006-08-18  Per Bothner  <per@bothner.com>
+
+	* TimeUtils.java (now): New static method.
+
 2006-08-17  Per Bothner  <per@bothner.com>
 
 	* TimeUtils.java (coerceToDateTime, coerceToDate, coerceToTime):
